add landing page and some components

--- a/Project-PromoJ-Modulo-2-Team-5-master/src/html/partials/footer.html
+++ b/Project-PromoJ-Modulo-2-Team-5-master/src/html/partials/footer.html
@@ -1,10 +1,10 @@
 <footer class="footer">
-  <div class=" wrapper">
+  <div class="wrapper">
     <div class="footer__copy">
       <img src="./assets/images/livecodeteam.png" />
     </div>
-    <a class="footer__logo" href="https://adalab.es/"><img src="./assets/images/logo-adalab.png" /></a>
+    <a class="footer__logo" href="https://adalab.es/"
+      ><img src="./assets/images/logo-adalab.png"
+    /></a>
   </div>
-
-
 </footer>
