--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,8 +1,10 @@
+@import 'functions';
 @import 'vars';
 @import 'reset';
 @import 'mixins';
-@import 'functions';
-
+// @import 'header';
+@import 'footer';
+/*
 .App {
   text-align: center;
 }
@@ -41,3 +43,4 @@
     transform: rotate(360deg);
   }
 }
+*/
