--- a/Project-PromoJ-Modulo-2-Team-5-master/src/html/partials/design.html
+++ b/Project-PromoJ-Modulo-2-Team-5-master/src/html/partials/design.html
@@ -1,5 +1,6 @@
 <h2 class="form__design__title js-accordion-title js-accordion-title-active">
-  <span><i class="far fa-object-ungroup"></i>Diseña</span><i class="fab fa-pagelines js-accordion-icon fa-rotate-180"></i>
+  <span><i class="far fa-object-ungroup"></i>Diseña</span
+  ><i class="fab fa-pagelines js-accordion-icon fa-rotate-180"></i>
 </h2>
 <div class="js-accordion-content js-accordion-content-open">
   <div class="design__container">
@@ -21,7 +22,14 @@
     </div>
     <div class="design__container__options">
       <label for="cold" class="cold">
-        <input type="radio" id="cold" class="js-palette" name="palette" value="1" checked />
+        <input
+          type="radio"
+          id="cold"
+          class="js-palette"
+          name="palette"
+          value="1"
+          checked
+        />
         <div class="palette-cold">
           <span class="a"></span>
           <span class="b"></span>
@@ -29,7 +37,13 @@
         </div>
       </label>
       <label for="warm" class="warm">
-        <input id="warm" type="radio" class="js-palette" name="palette" value="2" />
+        <input
+          id="warm"
+          type="radio"
+          class="js-palette"
+          name="palette"
+          value="2"
+        />
         <div class="palette-warm">
           <span class="a"></span>
           <span class="b"></span>
@@ -37,7 +51,13 @@
         </div>
       </label>
       <label for="medium" class="medium">
-        <input id="medium" type="radio" class="js-palette" name="palette" value="3" />
+        <input
+          id="medium"
+          type="radio"
+          class="js-palette"
+          name="palette"
+          value="3"
+        />
         <div class="palette-medium">
           <span class="a"></span>
           <span class="b"></span>
@@ -49,7 +69,10 @@
   <div class="design__container__frame">
     <h3>Marco</h3>
 
-    <div href="#" class="design__container__button js-frame-button js-frame-button-off">
+    <div
+      href="#"
+      class="design__container__button js-frame-button js-frame-button-off"
+    >
       <div class="design__container__button__round"></div>
     </div>
   </div>
