--- a/src/stylesheets/landing/_main.scss
+++ b/src/stylesheets/landing/_main.scss
@@ -1,5 +1,5 @@
-@import 'functions.scss';
-@import 'mixins.scss';
+@import '../common/functions';
+@import '../common/mixins';
 
 .page__main {
   background-image: url('../images/Background-prueba.png');
