--- a/src/stylesheets/landing/_main.scss
+++ b/src/stylesheets/landing/_main.scss
@@ -2,7 +2,7 @@
 @import '../common/mixins';
 
 .page__main {
-  background-image: url('../images/Background-prueba.png');
+  background-image: url('../../images/Background-prueba.png');
   background-size: cover;
   text-align: center;
   width: 100%;
