solve problem with photo component

--- a/src/stylesheets/preview/_preview.scss
+++ b/src/stylesheets/preview/_preview.scss
@@ -62,6 +62,12 @@
       width: rem(240);
       background-size: cover;
       background-position: center;
+      .photo-component{
+        height: rem(200);
+        width: rem(240);
+        background-size: contain;
+        background-position: center;
+      }
     }
 
     .social_media {
