--- a/src/stylesheets/preview/_image_preview.scss
+++ b/src/stylesheets/preview/_image_preview.scss
@@ -5,3 +5,9 @@
   transition-duration: 0.5s;
   transition-timing-function: ease-in-out;
 }
+
+.photo-mini {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
